src/objects/Medical_Clearance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Clearances</relationshipLabel>
        <relationshipName>Medical_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Clearance_Requested__c</fullName>
        <label>Date Clearance Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor_Fax__c</fullName>
        <label>Doctor Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Phone__c</fullName>
        <label>Doctor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Doctor_Specialty__c</fullName>
        <label>Doctor Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Endocrinologist</fullName>
                </value>
                <value>
                    <fullName>ENT Referral</fullName>
                </value>
                <value>
                    <fullName>Family medicine</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologist</fullName>
                </value>
                <value>
                    <fullName>General Practitioner</fullName>
                </value>
                <value>
                    <fullName>Geriatric medicine</fullName>
                </value>
                <value>
                    <fullName>Hematologist</fullName>
                </value>
                <value>
                    <fullName>Internal medicine</fullName>
                </value>
                <value>
                    <fullName>Nephrologist</fullName>
                </value>
                <value>
                    <fullName>Neurologist</fullName>
                </value>
                <value>
                    <fullName>Oncologist</fullName>
                </value>
                <value>
                    <fullName>Pain management</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Condition_Other__c</fullName>
        <label>Health Condition Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Condition__c</fullName>
        <label>Health Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anemic</fullName>
                </value>
                <value>
                    <fullName>Anticoagulants</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Atrial fibrillation</fullName>
                </value>
                <value>
                    <fullName>Bisphosphate</fullName>
                    <label>Bisphosphonate</label>
                </value>
                <value>
                    <fullName>Blood pressure</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>COPD</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Drug and alcohol treatment</fullName>
                </value>
                <value>
                    <fullName>Drug discontinuation</fullName>
                </value>
                <value>
                    <fullName>EKG</fullName>
                </value>
                <value>
                    <fullName>ENT Referral</fullName>
                </value>
                <value>
                    <fullName>Epilepsy</fullName>
                </value>
                <value>
                    <fullName>Excessive bleeding</fullName>
                </value>
                <value>
                    <fullName>Heart</fullName>
                </value>
                <value>
                    <fullName>Heart attack</fullName>
                </value>
                <value>
                    <fullName>Hepatitis</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>HIV</fullName>
                </value>
                <value>
                    <fullName>Kidney disease</fullName>
                </value>
                <value>
                    <fullName>Mood disorder</fullName>
                </value>
                <value>
                    <fullName>Organ transplant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physical Required</fullName>
                </value>
                <value>
                    <fullName>Radiation</fullName>
                </value>
                <value>
                    <fullName>Respiratory problems</fullName>
                </value>
                <value>
                    <fullName>Sleep Apnea</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Medical Clearances</relationshipLabel>
        <relationshipName>Medical_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Medical Clearances</relationshipLabel>
        <relationshipName>Medical_Clearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Note__c</fullName>
        <label>Request Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Via__c</fullName>
        <label>Requested Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Medical Clearance</label>
    <nameField>
        <displayFormat>MCN-{0000}</displayFormat>
        <label>Medical Clearance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Clearances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>